fix(filter search): close button was visible

--- a/src/styles/components/_filter-search.scss
+++ b/src/styles/components/_filter-search.scss
@@ -69,7 +69,7 @@
     }
   }
 
-  &__close {
+  .c-filter-search__close {
     align-self: flex-end;
 
     @include butler-mx.breakpoint("md") {
